# drcutils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  basic_functionality.ipynb  logo_adventures.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs-pages.yml  docs.yml  tests.yml  workflow.yml
artifacts/coverage/: coverage.json
artifacts/examples/: examples_metrics.json
docs/: analysis.rst  api.rst  bootstrap_np.rst  brand.rst  branding.rst  cad.rst  cli_standards.rst  colormaps.rst  concepts.rst  conf.py  dataset.rst  dependencies_and_extras.rst  doe.rst  doe_analysis.rst  env.rst  experiments.rst  index.rst  installation.rst  magic.rst  ml.rst  paper_figures.rst  plotting.rst  power.rst  quickstart.rst  readme.rst  repro.rst  requirement.txt  requirements.txt  runtime.rst  sequence.rst  typical_workflow.rst  visualization.rst
docs/_static/: custom.css
drcutils/: __init__.py  brand.py  cad.py  colormaps.py  env.py  magic.py  ml.py
drcutils/brand/: __init__.py  horizontal_logo.py  logo_only.py  stacked_logo.py
drcutils/data/: drc.mplstyle
examples/: basic_functionality.ipynb  brand_stack.ipynb  data_stack.ipynb  hack_stack.ipynb  hf_stack.ipynb  logo_adventures.ipynb  plotting_stack.ipynb  scratchpad.ipynb  sequence_models.py  stats_stack.ipynb
scripts/: check_coverage_thresholds.py  check_example_static_suite.py  check_examples_thresholds.py  generate_coverage_badge.py  generate_examples_badges.py  generate_examples_metrics.py
src/: __init__.py  env.py  hf_stack.py  ml.py  plotting_stack.py
src/brand/: __init__.py  horizontal_logo.py
src/drc_utils/: drc_logo_svg_to_stl.py
src/drc_utils/data/: logo.stl
src/drcutils/: __init__.py  brand.py  brand_stack.py  cad.py  colormaps.py  data_stack.py  env.py  hack_stack.py  hf_stack.py  logo.py  magic.py  ml.py  plotting_stack.py  power.py  stats_stack.py
src/drcutils/brand/: __init__.py  colormaps.py
src/drcutils/cli/: __init__.py  _common.py  data_cli.py  doe_analysis_cli.py  doe_cli.py  power_cli.py  repro_cli.py  stats_cli.py
src/drcutils/data/: __init__.py  dataset.py  drc.mplstyle
src/drcutils/doe/: __init__.py  analysis.py  designs.py  generate.py  one_stop.py
src/drcutils/runtime/: __init__.py  repro.py
src/drcutils/sequence/: __init__.py  _backend.py  embeddings.py  models.py  visualization.py
src/drcutils/stats/: __init__.py  bootstrap_np.py  nonparametric.py  templates.py
src/drcutils/visualization/: __init__.py  cad.py  ml.py  paper_figures.py  plotting.py
src/drcutils/viz/: __init__.py  ml.py  paper_figures.py  plotting.py
tests/: test_brand.py  test_brand_colormaps.py  test_brand_packaging.py  test_brand_watermark.py  test_cli_common.py  test_cli_data.py  test_cli_doe.py  test_cli_doe_analysis.py  test_cli_error_contract.py  test_cli_power.py  test_cli_repro.py  test_cli_standards.py  test_cli_stats.py  test_dataset.py  test_doe_analysis.py  test_doe_designs.py  test_doe_one_stop.py  test_env_ml.py  test_magic.py  test_power.py  test_repro.py  test_runtime_env.py  test_sequence_embeddings.py  test_sequence_hmm.py  test_sequence_integration_optional.py  test_sequence_markov.py  test_sequence_mocks.py  test_sequence_visualization.py  test_stats_bootstrap_np.py  test_stats_rank_tests.py  test_viz_cad.py  test_viz_paper_figures.py  test_viz_plotting.py
