[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drcutils"
version = "0.1.0"
description = "Utilities for research in the Design Research Collective"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "The Design Research Collective", email = "ask-drc@andrew.cmu.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "IPython",
  "matplotlib",
  "netron",
  "numpy",
  "numpy-stl",
  "pandas",
  "Pillow",
]

[project.urls]
Homepage = "https://github.com/cmudrc/drcutils/"
Repository = "https://github.com/cmudrc/drcutils/"
Issues = "https://github.com/cmudrc/drcutils/issues"

[project.scripts]
drc-doe = "drcutils.cli.doe_cli:main"
drc-stats = "drcutils.cli.stats_cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "sphinx>=7.4",
  "sphinx-rtd-theme>=2.0",
  "scipy>=1.11.0",
  "statsmodels>=0.14.0",
]
doe = ["pyDOE2>=1.3.0"]
stats = ["scipy>=1.11.0", "statsmodels>=0.14.0"]
plotly = ["plotly>=5.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drcutils = ["data/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
extend-exclude = ["examples/*.ipynb", "docs/_build"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["E501", "UP031"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["drcutils"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "IPython",
  "IPython.*",
  "matplotlib",
  "matplotlib.*",
  "netron",
  "numpy",
  "numpy.*",
  "pandas",
  "pandas.*",
  "plotly",
  "plotly.*",
  "pyDOE2",
  "pyDOE2.*",
  "stl",
  "stl.*",
  "PIL",
  "PIL.*",
  "scipy",
  "scipy.*",
  "statsmodels",
  "statsmodels.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["drcutils.brand", "drcutils.viz.paper_figures"]
ignore_errors = true
