[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drcutils"
version = "0.1.0"
description = "Utilities for research in the Design Research Collective"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "The Design Research Collective", email = "ask-drc@andrew.cmu.edu" },
]
maintainers = [
  { name = "Christopher C. McComb", email = "ccm@cmu.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "IPython",
  "matplotlib",
  "netron",
  "numpy",
  "numpy-stl",
  "pandas",
  "Pillow",
]

[project.urls]
Homepage = "https://github.com/cmudrc/drcutils/"
Repository = "https://github.com/cmudrc/drcutils/"
Issues = "https://github.com/cmudrc/drcutils/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "sphinx>=7.4",
  "sphinx-rtd-theme>=2.0",
  "scipy>=1.11.0",
  "statsmodels>=0.14.0",
  "twine>=5.1,<7",
  "uv>=0.6,<1",
]
stats = ["scipy>=1.11.0", "statsmodels>=0.14.0"]
plotly = ["plotly>=5.0"]
seaborn = ["seaborn>=0.13"]
visualization = ["plotly>=5.0", "seaborn>=0.13"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drcutils = [
  "data/*",
  "data/brand_assets/logos/horizontal/*.png",
  "data/brand_assets/logos/stacked/*.png",
  "data/brand_assets/logos/symbol/*.png",
  "data/brand_assets/logos/on_black/*.png",
  "data/brand_assets/patterns/*.png",
  "data/brand_assets/gradients/*.png",
  "data/brand_assets/circles/*.png",
  "data/brand_assets/scribbles/thin/*.png",
  "data/brand_assets/scribbles/thick/*.png",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
extend-exclude = ["examples/*.ipynb", "docs/_build"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["E501", "UP031"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["drcutils"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "IPython",
  "IPython.*",
  "matplotlib",
  "matplotlib.*",
  "netron",
  "numpy",
  "numpy.*",
  "pandas",
  "pandas.*",
  "plotly",
  "plotly.*",
  "stl",
  "stl.*",
  "PIL",
  "PIL.*",
  "scipy",
  "scipy.*",
  "hmmlearn",
  "hmmlearn.*",
  "networkx",
  "networkx.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "torch",
  "torch.*",
  "statsmodels",
  "statsmodels.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["drcutils.brand", "drcutils.viz.paper_figures"]
ignore_errors = true
